--- a/my-portfolio/src/homepage/Homepage.css
+++ b/my-portfolio/src/homepage/Homepage.css
@@ -8,7 +8,7 @@
   position: relative;
   font-family: sans-serif;
   text-transform: uppercase;
-  font-size: 2em;
+  font-size: 20px;
   letter-spacing: 4px;
   overflow: hidden;
   background: linear-gradient(90deg, #464040, #da9797, #464040);
@@ -77,14 +77,7 @@ h3 {
   text-align: justify;
   background-color: #ecd4d4;
 }
-.navContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: #1b2430;
-  padding: 70px 80px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
-}
+
 #navbar {
   display: flex;
   align-items: center;
@@ -103,7 +96,9 @@ h3 {
   color: #ecd4d4;
   cursor: pointer;
 }
-
+.navContainer {
+  justify-content: flex-end;
+}
 .glassCardCont {
   display: flex;
   align-items: center;
@@ -162,15 +157,21 @@ a:hover {
   .navContainer img {
     display: block;
   }
+
   .navContainer {
     padding: 51px 55px;
   }
   .glass-card {
     height: 17em;
-    width: 22em;
+    width: 20em;
   }
   .smallCardContainer {
-    height: 36em;
+    height: auto;
+    margin: 6px;
+  }
+  .smallCard {
+    box-shadow: 1px 2px 3px 4px rgba(12, 12, 12, 0.2);
+    background: transparent;
   }
   .card-text {
     font-size: 12px;
