--- a/my-portfolio/src/homepage/Homepage.css
+++ b/my-portfolio/src/homepage/Homepage.css
@@ -1,7 +1,5 @@
 * {
-  font-family: "Open Sans", sans-serif;
-  font-family: "Roboto", sans-serif;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Inter";
 }
 
 .intro {
@@ -107,9 +105,11 @@ h3 {
   height: 100vh;
   width: 100%;
   background-image: url("../images/orange.avif");
+  transition: 0.7s;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .smallCardContainer {
   box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.05),
     inset -5px -5px 5px rgba(255, 255, 255, 0.5),
@@ -134,23 +134,66 @@ a {
   font-weight: 600;
 }
 a:hover {
-  color: #1b2430;
+  color: #ecd4d4;
 }
 .glass-card {
   height: 15em;
 }
+.button {
+  width: 90px;
 
-@keyframes animate {
+  font-family: "Inter";
+
+  padding: 0.5rem 1rem;
+  border-radius: 0.375rem;
+  font-weight: 600;
+  text-align: center;
+  transition-duration: 0.3s;
+  transition-property: all;
+  transition-timing-function: ease;
+  margin: 0.75rem 0;
+}
+.button.outline {
+  border: 1px solid white;
+  color: #e1e7ef;
+}
+.button.outline:hover {
+  border: 1px solid #f3f3f3;
+  background: #ecd4d4;
+  color: #000;
+}
+
+/* code for the hr separator */
+.separator {
+  margin-top: 25px;
+  margin-bottom: 80px;
+  border: 0;
+}
+
+.separator--line {
+  border: 0;
+  border-bottom: 5px solid #464040;
+
+  width: 0;
+  animation: separator-width 1s ease-out forwards;
+}
+@keyframes separator-width {
   0% {
-    background-position: -500%;
+    width: 0;
   }
   100% {
-    background-position: 500%;
+    width: 100%;
   }
 }
+
 @media screen and (min-width: 750px) {
   .toggleBtn {
     visibility: hidden !important;
+  }
+}
+@media screen and (min-width: 750px) and (max-width: 950px) {
+  .navContainer {
+    align-items: center;
   }
 }
 @media screen and (max-width: 750px) {
@@ -162,8 +205,8 @@ a:hover {
     padding: 51px 55px;
   }
   .glass-card {
-    height: 17em;
-    width: 20em;
+    height: 16em;
+    width: 19em;
   }
   .smallCardContainer {
     height: auto;
