--- a/my-portfolio/src/components/glasscard/Glasscard.css
+++ b/my-portfolio/src/components/glasscard/Glasscard.css
@@ -1,3 +1,6 @@
+* {
+  font-family: "Inter";
+}
 .glass-card {
   display: flex;
   flex-direction: column;
@@ -14,4 +17,8 @@
   border: 2px solid transparent;
   background-clip: border-box;
   cursor: pointer;
+}
+.load-screen--message {
+  font-size: 25px;
+  font-weight: 600;
 }
