--- a/my-portfolio/src/homepage/Homepage.css
+++ b/my-portfolio/src/homepage/Homepage.css
@@ -172,10 +172,10 @@ a:hover {
 
 .separator--line {
   border: 0;
-  border-bottom: 5px solid #464040;
+  border-bottom: 2px solid #464040;
 
   width: 0;
-  animation: separator-width 1s ease-out forwards;
+  animation: separator-width 5s ease-in-out forwards;
 }
 @keyframes separator-width {
   0% {
