--- a/my-portfolio/src/components/contact/Contact.css
+++ b/my-portfolio/src/components/contact/Contact.css
@@ -8,13 +8,27 @@
 .footerContainer ul li {
   list-style: none;
 }
-.contactBtn {
-  border-radius: 1em;
+.button.contactBtn {
+  width: auto;
+
+  font-family: "Inter";
+
+  /* padding: 0.5rem 1rem; */
+  border-radius: 0.375rem;
+  font-weight: 600;
+  text-align: center;
+  transition-duration: 0.3s;
+  transition-property: all;
+  transition-timing-function: ease;
+  margin: 0.75rem 0;
 }
-.contactBtn:hover {
-  border: 2px solid #f3f3f3;
+.button.contactBtn {
+  border: 1px solid white;
+  color: #464040;
+}
+.button.contactBtn:hover {
+  border: 1px solid #f3f3f3;
   background: #ecd4d4;
-  color: #000;
 }
 .locationText {
   font: italic 1em "Fira Sans", serif;
